--- a/HMS_Backend/eureka-service/src/main/resources/application.properties
+++ b/HMS_Backend/eureka-service/src/main/resources/application.properties
@@ -3,3 +3,14 @@ server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+# Disable self-preservation for local development
+eureka.server.enable-self-preservation=false
+
+# Evict instances quickly in dev
+eureka.server.eviction-interval-timer-in-ms=5000
+
+# Disable excessive logging noise
+logging.level.com.netflix.eureka=OFF
+logging.level.com.netflix.discovery=OFF
+
+management.endpoints.web.exposure.include=health,info
