Added: Dummy route in API Gateway using Eureka service discovery Configured: Gateway routing with load-balanced service resolution

--- a/HMS_Backend/eureka-service/src/main/resources/application.properties
+++ b/HMS_Backend/eureka-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=eureka-service
 server.port=8761
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 # Disable self-preservation for local development
 eureka.server.enable-self-preservation=false
 
@@ -14,3 +14,4 @@ logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
 
 management.endpoints.web.exposure.include=health,info
+
