--- a/HMS_Backend/api-gateway/src/main/resources/application.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=api-gateway
 server.port=9090
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.gateway.routes[0].id=eureka-service-route
+spring.cloud.gateway.routes[0].uri=lb://EUREKA-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
