--- a/HMS_Backend/auth-service/src/main/resources/application.properties
+++ b/HMS_Backend/auth-service/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=auth-service
+server.port=9001
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/hms_auth_db
+spring.datasource.username=root
+spring.datasource.password=Ish@983556
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
