--- a/HMS_Backend/api-gateway/src/main/resources/application.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.cloud.gateway.routes[0].id=eureka-service-route
 spring.cloud.gateway.routes[0].uri=lb://EUREKA-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/**
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[1].id=auth-service-route
+spring.cloud.gateway.routes[1].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=0
