Configured: Seeded Admin data to db

--- a/HMS_Backend/auth-service/src/main/resources/application.properties
+++ b/HMS_Backend/auth-service/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+auth.admin.email=admin@hotelbooking.com
+auth.admin.password=admin123
+auth.admin.full-name=System Admin
