--- a/HMS_Backend/auth-service/src/main/resources/application.properties
+++ b/HMS_Backend/auth-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/hms_auth_db
 spring.datasource.username=root
-spring.datasource.password=Ish@983556
+spring.datasource.password=Ish983556
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
