--- a/HMS_Backend/auth-service/src/main/resources/application.properties
+++ b/HMS_Backend/auth-service/src/main/resources/application.properties
@@ -22,3 +22,6 @@ management.endpoint.health.show-details=always
 auth.admin.email=admin@hotelbooking.com
 auth.admin.password=admin123
 auth.admin.full-name=System Admin
+
+auth.jwt.secret=super-secret-key-change-later
+auth.jwt.expiry-minutes=60
