Documented: Complete authentication and onboarding API endpoints

--- a/HMS_Backend/api-gateway/src/main/resources/application.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.cloud.gateway.routes[1].id=auth-service-route
 spring.cloud.gateway.routes[1].uri=lb://AUTH-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=0
+
+auth.jwt.secret=super-secret-key-change-later-1234567890
+auth.jwt.expiry-minutes=60
