--- a/HMS_Backend/auth-service/src/main/resources/application.properties
+++ b/HMS_Backend/auth-service/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=auth-service
 server.port=9001
 
+spring.cloud.refresh.enabled=false
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/hms_auth_db
@@ -23,5 +26,5 @@ auth.admin.email=admin@hotelbooking.com
 auth.admin.password=admin123
 auth.admin.full-name=System Admin
 
-auth.jwt.secret=super-secret-key-change-later
+auth.jwt.secret=super-secret-key-change-later-1234567890
 auth.jwt.expiry-minutes=60
