--- a/HMS_Backend/hotel-service/src/main/resources/application.properties
+++ b/HMS_Backend/hotel-service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=hotel-service
+server.port=9002
+
+# DB
+spring.datasource.url=jdbc:mysql://localhost:3306/hms_hotel_db
+spring.datasource.username=root
+spring.datasource.password=Ish983556
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
