--- a/HMS_Backend/api-gateway/src/main/resources/application.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.properties
@@ -13,5 +13,9 @@ spring.cloud.gateway.routes[1].uri=lb://AUTH-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
 spring.cloud.gateway.routes[1].filters[0]=StripPrefix=0
 
+spring.cloud.gateway.routes[2].id=hotel-service-route
+spring.cloud.gateway.routes[2].uri=lb://HOTEL-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/brands/**,/branches/**
+
 auth.jwt.secret=super-secret-key-change-later-1234567890
 auth.jwt.expiry-minutes=60
