--- a/HMS_Backend/hotel-service/src/main/resources/application.properties
+++ b/HMS_Backend/hotel-service/src/main/resources/application.properties
@@ -15,4 +15,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # Actuator
 management.endpoints.web.exposure.include=health,info
 
-hotel.availibilty.deafult-days=365
+hotel.availability.default-days=365
