Fixed: Booking Service with Kafka Events and updated Hotel Service

--- a/HMS_Backend/api-gateway/src/main/resources/application.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.properties
@@ -17,5 +17,9 @@ spring.cloud.gateway.routes[2].id=hotel-service-route
 spring.cloud.gateway.routes[2].uri=lb://HOTEL-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/hotels/**
 
+spring.cloud.gateway.routes[3].id=booking-service-route
+spring.cloud.gateway.routes[3].uri=lb://BOOKING-SERVICE
+spring.cloud.gateway.routes[3].predicates[0]=Path=/bookings/**
+
 auth.jwt.secret=super-secret-key-change-later-1234567890
 auth.jwt.expiry-minutes=60
