--- a/HMS_Backend/notification-service/src/main/resources/application.properties
+++ b/HMS_Backend/notification-service/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 # Email Configuration (using Gmail SMTP - update with your credentials)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=ishughhhhh02@gmail.com
+spring.mail.password=vfcj tska iffg rcvp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
