--- a/HMS_Backend/api-gateway/src/main/resources/application.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.properties
@@ -21,5 +21,9 @@ spring.cloud.gateway.routes[3].id=booking-service-route
 spring.cloud.gateway.routes[3].uri=lb://BOOKING-SERVICE
 spring.cloud.gateway.routes[3].predicates[0]=Path=/bookings/**
 
+spring.cloud.gateway.routes[4].id=billing-service-route
+spring.cloud.gateway.routes[4].uri=lb://BILLING-SERVICE
+spring.cloud.gateway.routes[4].predicates[0]=Path=/bills/**
+
 auth.jwt.secret=super-secret-key-change-later-1234567890
 auth.jwt.expiry-minutes=60
