Implemented: Report Service for Admin and Staff

--- a/HMS_Backend/api-gateway/src/main/resources/application.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.properties
@@ -25,5 +25,9 @@ spring.cloud.gateway.routes[4].id=billing-service-route
 spring.cloud.gateway.routes[4].uri=lb://BILLING-SERVICE
 spring.cloud.gateway.routes[4].predicates[0]=Path=/bills/**
 
+spring.cloud.gateway.routes[5].id=reports-service-route
+spring.cloud.gateway.routes[5].uri=lb://REPORTS-SERVICE
+spring.cloud.gateway.routes[5].predicates[0]=Path=/reports/**
+
 auth.jwt.secret=super-secret-key-change-later-1234567890
 auth.jwt.expiry-minutes=60
