--- a/HMS_Backend/reports-service/src/main/resources/application.properties
+++ b/HMS_Backend/reports-service/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 spring.application.name=reports-service
+
+server.port=9006
+
+# Booking Database (read-only)
+spring.datasource.booking.url=jdbc:mysql://localhost:3306/hms_booking_db
+spring.datasource.booking.username=root
+spring.datasource.booking.password=Ish983556
+spring.datasource.booking.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Billing Database (read-only)
+spring.datasource.billing.url=jdbc:mysql://localhost:3306/hms_billing_db
+spring.datasource.billing.username=root
+spring.datasource.billing.password=Ish983556
+spring.datasource.billing.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hotel Database (read-only)
+spring.datasource.hotel.url=jdbc:mysql://localhost:3306/hms_hotel_db
+spring.datasource.hotel.username=root
+spring.datasource.hotel.password=Ish983556
+spring.datasource.hotel.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
