--- a/HMS_Backend/hotel-service/src/main/resources/application.properties
+++ b/HMS_Backend/hotel-service/src/main/resources/application.properties
@@ -16,3 +16,9 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=health,info
 
 hotel.availability.default-days=365
+
+# Redis Cache
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=300000
