Implemented : Redis Cache for Auth Service

--- a/HMS_Backend/auth-service/src/main/resources/application.properties
+++ b/HMS_Backend/auth-service/src/main/resources/application.properties
@@ -28,3 +28,9 @@ auth.admin.full-name=System Admin
 
 auth.jwt.secret=super-secret-key-change-later-1234567890
 auth.jwt.expiry-minutes=60
+
+# Redis Cache
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=300000
