Implemented : Redis Cache for Booking Service

--- a/HMS_Backend/billing-service/src/main/resources/application.properties
+++ b/HMS_Backend/billing-service/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.sp
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
 spring.kafka.consumer.properties.spring.json.value.default.type=java.util.Map
+
+# Redis Cache
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=300000
