--- a/HMS_Backend/booking-service/src/main/resources/application.properties
+++ b/HMS_Backend/booking-service/src/main/resources/application.properties
@@ -27,3 +27,9 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Redis Cache
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=300000
