--- a/HMS_Backend/reports-service/src/main/resources/application.properties
+++ b/HMS_Backend/reports-service/src/main/resources/application.properties
@@ -30,3 +30,9 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Actuator
 management.endpoints.web.exposure.include=health,info
+
+# Redis Cache (shorter TTL for dashboard data since it changes frequently)
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=120000
