--- a/HMS_Backend/auth-service/pom.xml
+++ b/HMS_Backend/auth-service/pom.xml
@@ -117,6 +117,20 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <!-- Mockito core (explicit for clarity & stability) -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- Mockito JUnit 5 integration -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <scope>test</scope>
+    </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
