--- a/HMS_Backend/billing-service/src/main/resources/application.properties
+++ b/HMS_Backend/billing-service/src/main/resources/application.properties
@@ -32,3 +32,17 @@ spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=300000
+
+# Circuit Breaker Configuration for Feign
+spring.cloud.openfeign.circuitbreaker.enabled=true
+resilience4j.circuitbreaker.instances.bookingService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.bookingService.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.bookingService.sliding-window-size=10
+resilience4j.circuitbreaker.instances.bookingService.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.bookingService.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.bookingService.automatic-transition-from-open-to-half-open-enabled=true
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
