--- a/HMS_Backend/auth-service/pom.xml
+++ b/HMS_Backend/auth-service/pom.xml
@@ -115,7 +115,12 @@
             <scope>runtime</scope>
         </dependency>
 
-        
+        <!-- H2 Database for Testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Lombok -->
         <dependency>
