--- a/HMS_Backend/auth-service/src/test/resources/application-test.properties
+++ b/HMS_Backend/auth-service/src/test/resources/application-test.properties
@@ -1,5 +1,33 @@
+# Test Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Disable Eureka for tests
+eureka.client.enabled=false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+# Disable Config Server for tests
+spring.cloud.config.enabled=false
+spring.config.import=
+
+# Disable Redis for tests (use simple cache)
+spring.cache.type=simple
+
+# Disable Actuator endpoints that require external services
+management.endpoints.enabled-by-default=false
+
+# JWT Configuration (required for tests)
+auth.jwt.secret=test-secret-key-for-testing-only-12345678901234567890
+auth.jwt.expiry-minutes=60
+
+# Admin Configuration (required for tests)
+auth.admin.email=admin@hotelbooking.com
+auth.admin.password=admin123
+auth.admin.full-name=System Admin
 
