--- a/HMS_Backend/notification-service/pom.xml
+++ b/HMS_Backend/notification-service/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- H2 Database for Testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Kafka -->
         <dependency>
