Fixed: Docker issues

--- a/HMS_Backend/api-gateway/src/main/resources/application.docker.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/application.docker.properties
@@ -1,7 +1,3 @@
-# Docker Configuration for API Gateway
-# This file contains all Docker-specific configurations
-# Loaded automatically in Docker via SPRING_CONFIG_IMPORT environment variable set in docker-compose.yml
-
 spring.application.name=api-gateway
 server.port=9090
 
@@ -10,44 +6,36 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Config Server (Docker)
-# Note: Config server import is handled via SPRING_CONFIG_IMPORT in docker-compose.yml
-spring.cloud.config.uri=http://config-server:8888
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-
-# Gateway Routes (Docker - using service discovery)
-spring.cloud.gateway.routes[0].id=eureka-service-route
+# Gateway Routes
+spring.cloud.gateway.routes[0].id=eureka
 spring.cloud.gateway.routes[0].uri=lb://EUREKA-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/**
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 
-spring.cloud.gateway.routes[1].id=auth-service-route
+spring.cloud.gateway.routes[1].id=auth
 spring.cloud.gateway.routes[1].uri=lb://AUTH-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=0
 
-spring.cloud.gateway.routes[2].id=hotel-service-route
+spring.cloud.gateway.routes[2].id=hotel
 spring.cloud.gateway.routes[2].uri=lb://HOTEL-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/hotels/**
 
-spring.cloud.gateway.routes[3].id=booking-service-route
+spring.cloud.gateway.routes[3].id=booking
 spring.cloud.gateway.routes[3].uri=lb://BOOKING-SERVICE
 spring.cloud.gateway.routes[3].predicates[0]=Path=/bookings/**
 
-spring.cloud.gateway.routes[4].id=billing-service-route
+spring.cloud.gateway.routes[4].id=billing
 spring.cloud.gateway.routes[4].uri=lb://BILLING-SERVICE
 spring.cloud.gateway.routes[4].predicates[0]=Path=/bills/**
 
-spring.cloud.gateway.routes[5].id=reports-service-route
+spring.cloud.gateway.routes[5].id=reports
 spring.cloud.gateway.routes[5].uri=lb://REPORTS-SERVICE
 spring.cloud.gateway.routes[5].predicates[0]=Path=/reports/**
 
-# JWT Configuration
-auth.jwt.secret=your-secret-key-for-jwt-token-generation-min-256-bits-long
+# JWT
+auth.jwt.secret=super-secret-key-change-later-1234567890
 auth.jwt.expiry-minutes=60
 
 # Actuator
 management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
-
+management.endpoint.health.show-details=never
