--- a/HMS_Backend/auth-service/src/main/resources/application.docker.properties
+++ b/HMS_Backend/auth-service/src/main/resources/application.docker.properties
@@ -1,6 +1,3 @@
-# Docker Configuration for Auth Service
-# Loaded automatically in Docker via SPRING_CONFIG_IMPORT environment variable set in docker-compose.yml
-
 spring.application.name=auth-service
 server.port=9001
 
@@ -9,13 +6,7 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Config Server (Docker)
-spring.cloud.config.uri=http://config-server:8888
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-spring.cloud.refresh.enabled=false
-
-# MySQL Configuration (Docker)
+# MySQL (Docker)
 spring.datasource.url=jdbc:mysql://mysql-auth:3306/hms_auth_db
 spring.datasource.username=root
 spring.datasource.password=Ish983556
@@ -26,22 +17,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Actuator
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
-
-# Admin User Configuration
-auth.admin.email=admin@hotelbooking.com
-auth.admin.password=Admin123
-auth.admin.full-name=System Administrator
-
-# JWT Configuration
-auth.jwt.secret=your-secret-key-for-jwt-token-generation-min-256-bits-long
-auth.jwt.expiry-minutes=60
-
-# Redis Cache (Docker)
+# Redis
 spring.cache.type=redis
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=300000
 
+# Admin User
+auth.admin.email=admin@hotelbooking.com
+auth.admin.password=Admin123
+auth.admin.full-name=System Admin
+
+# JWT
+auth.jwt.secret=super-secret-key-change-later-1234567890
+auth.jwt.expiry-minutes=60
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=never
