--- a/HMS_Backend/eureka-service/src/main/resources/application.properties
+++ b/HMS_Backend/eureka-service/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=eureka-service
 server.port=8761
 
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-# Disable self-preservation for local development
-eureka.server.enable-self-preservation=false
+# Eureka Server (standalone)
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 
-# Evict instances quickly in dev
+# Dev-friendly settings
+eureka.server.enable-self-preservation=false
 eureka.server.eviction-interval-timer-in-ms=5000
 
-# Disable excessive logging noise
+# Logging
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
 
+# Actuator
 management.endpoints.web.exposure.include=health,info
-
