--- a/HMS_Backend/hotel-service/src/main/resources/application.docker.properties
+++ b/HMS_Backend/hotel-service/src/main/resources/application.docker.properties
@@ -1,6 +1,3 @@
-# Docker Configuration for Hotel Service
-# Loaded automatically in Docker via SPRING_CONFIG_IMPORT environment variable set in docker-compose.yml
-
 spring.application.name=hotel-service
 server.port=9002
 
@@ -9,30 +6,26 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Config Server (Docker)
-spring.cloud.config.uri=http://config-server:8888
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-
-# MySQL Configuration (Docker)
+# MySQL
 spring.datasource.url=jdbc:mysql://mysql-hotel:3306/hms_hotel_db
 spring.datasource.username=root
 spring.datasource.password=Ish983556
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Actuator
-management.endpoints.web.exposure.include=health,info
-
-# Hotel Configuration
-hotel.availability.default-days=365
-
-# Redis Cache (Docker)
+# Redis Cache
 spring.cache.type=redis
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=300000
 
+# Hotel Configuration
+hotel.availability.default-days=365
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=never
