--- a/HMS_Backend/hotel-service/src/main/resources/bootstrap.properties
+++ b/HMS_Backend/hotel-service/src/main/resources/bootstrap.properties
@@ -1,12 +1,11 @@
-# Config Server Configuration
-# These values are for local development
-# In Docker, they are overridden by environment variables in docker-compose.yml
 spring.application.name=hotel-service
-spring.config.import=optional:configserver:http://localhost:8888
-spring.cloud.config.uri=http://localhost:8888
+
+# Config Server (Docker DNS, resilient startup)
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
+spring.config.import=optional:configserver:http://config-server:8888
 
-# Eureka (needed to discover config server - localhost for local dev)
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
+# Eureka (service discovery)
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
