--- a/HMS_Backend/billing-service/src/main/resources/application.docker.properties
+++ b/HMS_Backend/billing-service/src/main/resources/application.docker.properties
@@ -1,6 +1,3 @@
-# Docker Configuration for Billing Service
-# Loaded automatically in Docker via SPRING_CONFIG_IMPORT environment variable set in docker-compose.yml
-
 spring.application.name=billing-service
 server.port=9005
 
@@ -9,25 +6,18 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Config Server (Docker)
-spring.cloud.config.uri=http://config-server:8888
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-
-# MySQL Configuration (Docker)
+# MySQL
 spring.datasource.url=jdbc:mysql://mysql-billing:3306/hms_billing_db
 spring.datasource.username=root
 spring.datasource.password=Ish983556
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Actuator
-management.endpoints.web.exposure.include=health,info
-
-# Kafka Consumer (Docker)
+# Kafka Consumer
 spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=billing-group
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -38,14 +28,15 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
 spring.kafka.consumer.properties.spring.json.value.default.type=java.util.Map
 
-# Redis Cache (Docker)
+# Redis Cache
 spring.cache.type=redis
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=300000
 
-# Circuit Breaker Configuration for Feign
+# Feign + Circuit Breaker
 spring.cloud.openfeign.circuitbreaker.enabled=true
+
 resilience4j.circuitbreaker.instances.bookingService.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.bookingService.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.bookingService.sliding-window-size=10
@@ -53,8 +44,11 @@ resilience4j.circuitbreaker.instances.bookingService.minimum-number-of-calls=5
 resilience4j.circuitbreaker.instances.bookingService.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.instances.bookingService.automatic-transition-from-open-to-half-open-enabled=true
 
-# Swagger/OpenAPI Configuration
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=never
+
+# Swagger / OpenAPI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
-
