--- a/HMS_Backend/reports-service/src/main/resources/application.docker.properties
+++ b/HMS_Backend/reports-service/src/main/resources/application.docker.properties
@@ -1,6 +1,3 @@
-# Docker Configuration for Reports Service
-# Loaded automatically in Docker via SPRING_CONFIG_IMPORT environment variable set in docker-compose.yml
-
 spring.application.name=reports-service
 server.port=9006
 
@@ -9,40 +6,35 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-# Config Server (Docker)
-spring.cloud.config.uri=http://config-server:8888
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-
-# Booking Database (read-only) - Docker
+# Booking DB (read-only)
 spring.datasource.booking.jdbc-url=jdbc:mysql://mysql-booking:3306/hms_booking_db
 spring.datasource.booking.username=root
 spring.datasource.booking.password=Ish983556
 spring.datasource.booking.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Billing Database (read-only) - Docker
+# Billing DB (read-only)
 spring.datasource.billing.jdbc-url=jdbc:mysql://mysql-billing:3306/hms_billing_db
 spring.datasource.billing.username=root
 spring.datasource.billing.password=Ish983556
 spring.datasource.billing.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hotel Database (read-only) - Docker
+# Hotel DB (read-only)
 spring.datasource.hotel.jdbc-url=jdbc:mysql://mysql-hotel:3306/hms_hotel_db
 spring.datasource.hotel.username=root
 spring.datasource.hotel.password=Ish983556
 spring.datasource.hotel.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Configuration
+# JPA (read-only reporting)
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Actuator
-management.endpoints.web.exposure.include=health,info
-
-# Redis Cache (Docker) - shorter TTL for dashboard data since it changes frequently
+# Redis Cache (short TTL for dashboards)
 spring.cache.type=redis
 spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=120000
 
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=never
