Added: Documentation and Reports

--- a/HMS_Backend/booking-service/src/main/resources/bootstrap.properties
+++ b/HMS_Backend/booking-service/src/main/resources/bootstrap.properties
@@ -3,9 +3,9 @@ spring.application.name=booking-service
 # Config Server (Docker DNS, resilient startup)
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
-spring.config.import=optional:configserver:http://config-server:8888
+spring.config.import=optional:configserver:http://localhost:8888
 
 # Eureka (service discovery)
-eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
