--- a/HMS_Backend/api-gateway/src/main/resources/bootstrap.properties
+++ b/HMS_Backend/api-gateway/src/main/resources/bootstrap.properties
@@ -3,9 +3,9 @@ spring.application.name=api-gateway
 # Config Server (Docker DNS, not localhost)
 spring.cloud.config.enabled=true
 spring.cloud.config.fail-fast=false
-spring.config.import=optional:configserver:http://config-server:8888
+spring.config.import=optional:configserver:http://localhost:8888
 
 # Eureka (used to locate services if needed)
-eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
