created : Docker log file

--- a/HMS_Backend/billing-service/src/main/resources/bootstrap.properties
+++ b/HMS_Backend/billing-service/src/main/resources/bootstrap.properties
@@ -1,11 +1,9 @@
 spring.application.name=billing-service
 
-# Config Server (Docker DNS, resilient startup)
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-spring.config.import=optional:configserver:http://localhost:8888
+# Config Server - Disabled for docker profile (using local application.docker.properties)
+spring.cloud.config.enabled=false
 
 # Eureka (service discovery)
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
