--- a/HMS_Backend/reports-service/src/main/resources/bootstrap.properties
+++ b/HMS_Backend/reports-service/src/main/resources/bootstrap.properties
@@ -1,40 +1,9 @@
 spring.application.name=reports-service
 
-# Config Server (Docker DNS, resilient startup)
-spring.cloud.config.enabled=true
-spring.cloud.config.fail-fast=false
-spring.config.import=optional:configserver:http://localhost:8888
+# Config Server - Disabled for docker profile (using local application.docker.properties)
+spring.cloud.config.enabled=false
 
 # Eureka (service discovery)
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
-# Booking Database (read-only)
-spring.datasource.booking.jdbc-url=jdbc:mysql://localhost:3306/hms_booking_db
-spring.datasource.booking.username=root
-spring.datasource.booking.password=Ish983556
-spring.datasource.booking.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Billing Database (read-only)
-spring.datasource.billing.jdbc-url=jdbc:mysql://localhost:3306/hms_billing_db
-spring.datasource.billing.username=root
-spring.datasource.billing.password=Ish983556
-spring.datasource.billing.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Hotel Database (read-only)
-spring.datasource.hotel.jdbc-url=jdbc:mysql://localhost:3306/hms_hotel_db
-spring.datasource.hotel.username=root
-spring.datasource.hotel.password=Ish983556
-spring.datasource.hotel.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Redis Cache (localhost for local development)
-spring.cache.type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.cache.redis.time-to-live=120000
