--- a/HMS_Backend/reports-service/src/main/resources/application-docker.properties
+++ b/HMS_Backend/reports-service/src/main/resources/application-docker.properties
@@ -6,20 +6,23 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
+# Disable default datasource auto-configuration (we use custom datasources)
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
 # Booking DB (read-only)
-spring.datasource.booking.jdbc-url=jdbc:mysql://mysql-booking:3306/hms_booking_db
+spring.datasource.booking.url=jdbc:mysql://mysql-booking:3306/hms_booking_db
 spring.datasource.booking.username=root
 spring.datasource.booking.password=Ish983556
 spring.datasource.booking.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Billing DB (read-only)
-spring.datasource.billing.jdbc-url=jdbc:mysql://mysql-billing:3306/hms_billing_db
+spring.datasource.billing.url=jdbc:mysql://mysql-billing:3306/hms_billing_db
 spring.datasource.billing.username=root
 spring.datasource.billing.password=Ish983556
 spring.datasource.billing.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hotel DB (read-only)
-spring.datasource.hotel.jdbc-url=jdbc:mysql://mysql-hotel:3306/hms_hotel_db
+spring.datasource.hotel.url=jdbc:mysql://mysql-hotel:3306/hms_hotel_db
 spring.datasource.hotel.username=root
 spring.datasource.hotel.password=Ish983556
 spring.datasource.hotel.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -38,3 +41,4 @@ spring.cache.redis.time-to-live=120000
 # Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=never
+
